--- a/locales/US/en/file5_DE.properties
+++ b/locales/US/en/file5_DE.properties
@@ -14,3 +14,4 @@ test.string.gat34= <br>
 test.string.gat35= <p>
 test.string.gat36= Please vist <a href='www.paypal.com'>PayPal</a>
 test.string.gat37=  
+test.string.gat38= test string 8
