Content strings from Qordoba

--- a/locales/US/en/file5_DE.properties
+++ b/locales/US/en/file5_DE.properties
@@ -1,4 +1,4 @@
-test.string.aw01=here I stand
+test.string.aw01=here I stand 1
 test.string.aw02=and here I'll stay
 test.string.aw03=cold never bother me any way
 test.string.aw04=let it go
@@ -14,4 +14,4 @@ test.string.gat34= <br>
 test.string.gat35= <p>
 test.string.gat36= Please vist <a href='www.paypal.com'>PayPal</a>
 test.string.gat37=  
-test.string.gat38= test string 8
+test.string.gat38=test string 8-1
