--- a/locales/US/en/file5_DE.properties
+++ b/locales/US/en/file5_DE.properties
@@ -15,3 +15,4 @@ test.string.gat35= <p>
 test.string.gat36= Please vist <a href='www.paypal.com'>PayPal</a>
 test.string.gat37=  
 test.string.gat38=test string 8-1
+test.string.gat39= Here comes the sun.
